# flowsort

./: .gitignore  README.md  flowsort.py  pyproject.toml
tests/: __init__.py  conftest.py  test_classification.py  test_cli.py  test_config.py  test_flowsort.py  test_integration.py
